# cliTweet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
clitweet/: args.py  main.py  main_2.py
clitweet/utils/: args.py  client.py  server.py
hushtweet/: main.py
hushtweet/utils/: args.py  client.py  credentials.py  server.py
