[tool.poetry]
name = "clitweet"
version = "0.1.0"
description = "Tweet from the command line"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
