[tool.poetry]
name = "hushtweet"
version = "0.2."
description = "Tweet from the command line"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
toml = "^0.10.2"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hushtweet = "hushtweet.main:main"
